package com.bank.IOBANK;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class IoBankApplication {

	public static void main(String[] args) {
		SpringApplication.run(IoBankApplication.class, args);
	}

}
