package com.bank.IOBANK.enums;

public enum Status {

    PENDING,
    COMPLETED,
    FAILED,
    EXPIRED,
    CANCELLED
}
