package com.bank.IOBANK.enums;

public enum Type {

    WITHDRAW,
    DEPOSIT,
    DEBIT,
    CREDIT,
    CONVERSION,
}
